--- a/dev/css/utils_hover/utils_hover_spacing.css
+++ b/dev/css/utils_hover/utils_hover_spacing.css
@@ -1,91 +1,91 @@
-.mr-hover-gap {
+.mr-hover-gap:hover {
   gap: 0.75rem;
   gap: var(--gap, 0.75rem);
 }
-.mr-hover-nogap {
+.mr-hover-nogap:hover {
   gap: 0 !important;
 }
-.mr-hover-rowgap {
+.mr-hover-rowgap:hover {
   row-gap: 0.75rem;
   row-gap: var(--gap, 0.75rem);
 }
-.mr-hover-norowgap {
+.mr-hover-norowgap:hover {
   row-gap: 0 !important;
 }
-.mr-hover-columngap {
+.mr-hover-columngap:hover {
   column-gap: 0.75rem;
   column-gap: var(--gap, 0.75rem);
 }
-.mr-hover-nocolumngap {
+.mr-hover-nocolumngap:hover {
   column-gap: 0 !important;
 }
-.mr-hover-margin {
+.mr-hover-margin:hover {
   margin: 0.75rem;
   margin: var(--margin, 0.75rem);
 }
-.mr-hover-margintop {
+.mr-hover-margintop:hover {
   margin-top: 0.75rem;
   margin-top: var(--margin, 0.75rem);
 }
-.mr-hover-marginright {
+.mr-hover-marginright:hover {
   margin-right: 0.75rem;
   margin-right: var(--margin, 0.75rem);
 }
-.mr-hover-marginbottom {
+.mr-hover-marginbottom:hover {
   margin-bottom: 0.75rem;
   margin-bottom: var(--margin, 0.75rem);
 }
-.mr-hover-marginleft {
+.mr-hover-marginleft:hover {
   margin-left: 0.75rem;
   margin-left: var(--margin, 0.75rem);
 }
-.mr-hover-nomargin {
+.mr-hover-nomargin:hover {
   margin: 0 !important;
 }
-.mr-hover-nomargintop {
+.mr-hover-nomargintop:hover {
   margin-top: 0 !important;
 }
-.mr-hover-nomarginright {
+.mr-hover-nomarginright:hover {
   margin-right: 0 !important;
 }
-.mr-hover-nomarginbottom {
+.mr-hover-nomarginbottom:hover {
   margin-bottom: 0 !important;
 }
-.mr-hover-nomarginleft {
+.mr-hover-nomarginleft:hover {
   margin-left: 0 !important;
 }
-.mr-hover-padding {
+.mr-hover-padding:hover {
   padding: 0.75rem;
   padding: var(--padding, 0.75rem);
 }
-.mr-hover-paddingtop {
+.mr-hover-paddingtop:hover {
   padding-top: 0.75rem;
   padding-top: var(--padding, 0.75rem);
 }
-.mr-hover-paddingright {
+.mr-hover-paddingright:hover {
   padding-right: 0.75rem;
   padding-right: var(--padding, 0.75rem);
 }
-.mr-hover-paddingbottom {
+.mr-hover-paddingbottom:hover {
   padding-bottom: 0.75rem;
   padding-bottom: var(--padding, 0.75rem);
 }
-.mr-hover-paddingleft {
+.mr-hover-paddingleft:hover {
   padding-left: 0.75rem;
   padding-left: var(--padding, 0.75rem);
 }
-.mr-hover-nopadding {
+.mr-hover-nopadding:hover {
   padding: 0 !important;
 }
-.mr-hover-nopaddingtop {
+.mr-hover-nopaddingtop:hover {
   padding-top: 0 !important;
 }
-.mr-hover-nopaddingright {
+.mr-hover-nopaddingright:hover {
   padding-right: 0 !important;
 }
-.mr-hover-nopaddingbottom {
+.mr-hover-nopaddingbottom:hover {
   padding-bottom: 0 !important;
 }
-.mr-hover-nopaddingleft {
+.mr-hover-nopaddingleft:hover {
   padding-left: 0 !important;
 }
